--- a/src/test/resources/general.properties
+++ b/src/test/resources/general.properties
@@ -1,5 +1,5 @@
 target = local
 browser = chrome
-url.base = https://eval.devskiller.com/3QA9-GGTP-TGRU/assignment/S1F#:~:text=Mercedes%2DBenz%20Shop%20Australia
+url.base = https://shop.mercedes-benz.com/en-au/shop/vehicle/srp/demo
 timeout = 3
 headless = false
