--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,7 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.10.1'
     implementation 'io.github.bonigarcia:webdrivermanager:5.6.0'
     implementation 'org.aeonbits.owner:owner-java8:1.0.12'
+    implementation 'io.github.sukgu:automation:0.1.4.1'
 }
 
 test {
