--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -11,20 +11,19 @@ permissions:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set up JDK 11
+      - name: Set up JDK 14
         uses: actions/setup-java@v3
         with:
           java-version: '11'
           distribution: 'temurin'
 
       - name: Grant execute permission for gradlew
-          run: chmod +x gradlew
+        run: chmod +x gradlew
 
       - name: Build with Gradle
-          run: ./gradlew test --tests "MercedesTest" --DBROWSER=headless
+        run: ./gradlew test --tests "MercedesTest" -DBROWSER=headless
