--- a/src/test/resources/general.properties
+++ b/src/test/resources/general.properties
@@ -1,5 +1,5 @@
 target=local
 browser=chrome
-url.base=https://shop.mercedes-benz.com/en-au/shop/vehicle/srp/demo
+url.base=https://pt.wikipedia.org/
 timeout=3
 headless=false
